# cososc

./: .gitignore  README.md  pyproject.toml
exercises/: week1.ipynb  week1_ic2s2_2025_researchers.csv  week2.ipynb  week2_openalex_authors.csv  week3.ipynb  week3_css_authors.json  week3_ic2s2_coauthors.json  week3_ic2s2_papers.json  week4.ipynb  week5.ipynb  week6.ipynb  week6_communities.json  week7.ipynb  week8.ipynb
project/: project.ipynb
