[project]
name = "cososc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx==3.3",
    "netwulf>=0.1.5",
    "pandas>=3.0.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
